<resources>
    <string name="app_name">Kurele</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="popularTitle">Mas Populares</string>
    <string name="recommended">Recomendados</string>
    <string name="synopsis">Sinopsis</string>
    <string name="description">Descripcion</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="registerNow">Registrate Ahora</string>
    <string name="nameRegister">Nombre</string>
    <string name="surnameRegister">Apellido</string>
    <string name="emailRegister">Email</string>
    <string name="passRegister">Contraseña</string>
    <string name="userRegister">Usuario</string>
    <string name="home">Home</string>
    <string name="text_label_2">Configuracion</string>
    <string name="favorites">Favoritos</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_to_favourites">Agregar a favoritos</string>
    <string name="remove_to_favorites">Quitar de Favoritos</string>
    <string name="settings">Configuracion</string>
    <string name="search">Buscar</string>
    <string name="select_genres">Seleccione Genero</string>
    <string name="select_order">Ordenar por ...</string>
    <string name="most_popular">Mas popular</string>
    <string name="most_recent">Mas Reciente</string>
    <string name="prompt_username">Usuario</string>
</resources>