<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_backgound"
    tools:context=".business.RegisterActivity">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">

     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
             android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="@string/registerNow"
             android:textColor="@color/white"
             android:textSize="35sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/nameRegister"
             android:layout_width="303dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="49dp"
             android:gravity="center"
             android:hint="@string/nameRegister"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:ignore="MissingConstraints">

             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="303dp"
                 android:layout_height="56dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/surnameRegister"
             style="attr/textInputFilledStyle"
             android:layout_width="303dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:gravity="center"
             android:hint="@string/surnameRegister"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameRegister"
             tools:ignore="MissingConstraints">

             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="303dp"
                 android:layout_height="56dp" />
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailRegister"
             style="attr/textInputFilledStyle"
             android:layout_width="303dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:gravity="center"
             android:hint="@string/emailRegister"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/surnameRegister"
             tools:ignore="MissingConstraints">

             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="303dp"
                 android:layout_height="56dp" />
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/userRegister"
             style="attr/textInputFilledStyle"
             android:layout_width="303dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:gravity="center"
             android:hint="@string/userRegister"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailRegister"
             tools:ignore="MissingConstraints">

             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="303dp"
                 android:layout_height="56dp" />
         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passRegister"
             style="attr/textInputFilledStyle"
             android:layout_width="303dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:gravity="center"
             android:hint="@string/passRegister"
             app:endIconMode="password_toggle"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userRegister"
             tools:ignore="MissingConstraints">

             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="303dp"
                 android:layout_height="56dp"
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>

         <Button
             android:id="@+id/registerButton"
             android:layout_width="338dp"
             android:layout_height="57dp"
             android:layout_marginTop="40sp"
             android:layout_marginBottom="40sp"
             android:background="@drawable/btn_style"


             android:text="@string/action_sign_in"

             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passRegister"
             tools:ignore="MissingConstraints" />


     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>